delete display:flex; in header to fix logo distortion

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -232,7 +232,6 @@ button:focus,
   border-radius: 10%;
   margin: 20px;
   margin-top: 40px;
-  image-orientation: vertical;
 }
 
 .about-body__more p {
