--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,9 @@
   --font-weight: bold;
 }
 
-*, *:after, *::before {
+*,
+*:after,
+*::before {
   box-sizing: border-box;
 }
 
@@ -92,7 +94,6 @@ button:focus,
 }
 
 .page-header {
-  display: flex;
   max-width: 100%;
   margin: auto;
   padding: 20px;
@@ -114,7 +115,6 @@ button:focus,
 
 .navigation-list {
   list-style-type: none;
-
 }
 
 .navigation-list li {
@@ -131,7 +131,7 @@ button:focus,
   text-transform: uppercase;
   letter-spacing: 1px;
   font-weight: 400;
-  text-shadow: 0 0 1px rgba(255,255,255,0.3);
+  text-shadow: 0 0 1px rgba(255, 255, 255, 0.3);
   font-size: 18px;
 }
 
@@ -139,8 +139,6 @@ button:focus,
 .navigation-list a:focus::after {
   height: 2px;
   opacity: 1;
-  -webkit-transform: translateY(0px);
-  -moz-transform: translateY(0px);
   transform: translateY(0px);
 }
 
@@ -153,11 +151,7 @@ button:focus,
   background: var(--primary-color);
   content: '';
   opacity: 0;
-  -webkit-transition: height 0.3s, opacity 0.3s, -webkit-transform 0.3s;
-  -moz-transition: height 0.3s, opacity 0.3s, -moz-transform 0.3s;
   transition: height 0.3s, opacity 0.3s, transform 0.3s;
-  -webkit-transform: translateY(-10px);
-  -moz-transform: translateY(-10px);
   transform: translateY(-10px);
 }
 
